Refactor/183: Refactor GitHub Indicator computer classes to avoid duplication code